# Mosquitto-ACL-Visualizer

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: api.md  architecture.md  learning-acl.md  usage.md
examples/: sample.acl
frontend/: app.js  index.html  index_old.html  styles.css
src/acl_visualizer/: generator.py  parser.py  visualizer.py  webapp.py
tests/: test_generator.py  test_parser.py  test_visualizer.py
